<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_gray_e4"
        android:padding="10dp"
        android:text="@string/recipe_message_box_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_message_title"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/emailContent"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/recipe_email_content"
            android:maxLength="200"
            android:lines="2"
            android:maxLines="3" />
    </LinearLayout>
</LinearLayout>
