<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.LoginActivity"
    tools:showIn="@layout/activity_login">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_logo_white"/>

    <LinearLayout
        android:id="@+id/textinputAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="50dp">

        <ImageView android:layout_height="30dp"
            android:layout_width="30dp"
            android:src="@drawable/ic_input_phone"/>
        <EditText
            android:id="@+id/editAccount"
            style="@style/input_white_style"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/textinputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp">
        <ImageView android:layout_height="30dp"
            android:layout_width="30dp"
            android:src="@drawable/ic_input_pwd"/>
        <EditText
            android:id="@+id/editPassword"
            style="@style/input_white_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/account_pwd_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        style="@style/btn_transparent_commit"
        android:layout_marginTop="40dp"
        android:text="@string/login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/btnToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="12dp"
            android:text="@string/register"
            android:textColor="@color/common_white"
            android:textSize="@dimen/body_text" />

        <TextView
            android:id="@+id/btnToForgetPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="12dp"
            android:text="@string/forget_password"
            android:textColor="@color/common_white"
            android:textSize="@dimen/body_text" />
    </RelativeLayout>

</LinearLayout>
