<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	android:orientation="vertical"
	android:background="@drawable/shape_background"
	tools:context=".ui.activity.ResetPwdActivity">

	<include layout="@layout/lay_actionbar_white"/>

	<ImageView
		android:layout_gravity="center_horizontal"
		android:layout_width="200dp"
		android:layout_height="70dp"
		android:layout_marginTop="20dp"
		android:src="@drawable/ic_logo_white"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin">

		<LinearLayout
			android:id="@+id/textinputAccount"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:layout_marginTop="20dp">

			<ImageView android:layout_height="30dp"
				android:layout_width="30dp"
				android:src="@drawable/ic_input_phone"/>

			<EditText
				android:id="@+id/editAccount"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/account_hint"
				android:maxLength="40"
				style="@style/input_white_style"
				android:padding="10dp"/>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/textinputPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:layout_marginTop="20dp">

			<ImageView android:layout_height="30dp"
				android:layout_width="30dp"
				android:src="@drawable/ic_input_pwd"/>
			<EditText
				android:id="@+id/editPassword"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/account_pwd_hint"
				android:maxLength="20"
				android:inputType="textPassword"
				style="@style/input_white_style"
				android:padding="10dp"/>
		</LinearLayout>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dip"
			android:orientation="horizontal">

			<LinearLayout
				android:id="@+id/textinputVerifyCode"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_toLeftOf="@+id/btnVldCode"
				android:layout_centerInParent="true"
				android:layout_alignParentLeft="true"
				android:gravity="center_vertical">

				<ImageView android:layout_height="30dp"
					android:layout_width="30dp"
					android:src="@drawable/ic_input_vld"/>
				<EditText
					android:id="@+id/editVerifyCode"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/account_verify_hint"
					android:maxLength="10"
					android:inputType="number"
					style="@style/input_white_style"
					android:padding="10dp"/>
			</LinearLayout>

			<Button
				android:id="@+id/btnVldCode"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="@dimen/body_text"
				android:layout_centerInParent="true"
				android:layout_alignParentRight="true"
				android:textColor="@color/common_white"
				android:background="@drawable/selector_corners_vld_transparent_button"
				android:layout_marginLeft="5dp"
				android:text="@string/get_verify_code"/>
		</RelativeLayout>



		<Button
			android:id="@+id/btnResetPwd"
			style="@style/btn_transparent_commit"
			android:layout_marginTop="40dip"
			android:text="@string/reset_password"/>
	</LinearLayout>

</LinearLayout>
