<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="2dp"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#35c7ec"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ivDevice"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_default_1" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/swEnable"
                android:layout_toRightOf="@id/ivDevice"
                android:text="如果大家都数据库的萨拉上来，则多久啊考了多少为实际打款哈考试结束"
                android:textColor="@color/common_white" />

            <com.suke.widget.SwitchButton
                android:id="@+id/swEnable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:sb_show_indicator="false"
                android:checked="true"
                android:maxWidth="50dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#86bc7f">

                <TextView
                    android:id="@+id/tvEdgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp"
                    android:text="@string/recipe_edge"
                    android:textColor="@color/common_white" />

                <TextView
                    android:id="@+id/tvEdgeContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvEdgeTitle"
                    android:layout_centerHorizontal="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/recipe_edge_detail"
                    android:textColor="@color/common_white" />

                <CheckBox
                    android:id="@+id/cbEdge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:checked="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#db7068">

                <TextView
                    android:id="@+id/tvPeriodTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp"
                    android:text="@string/recipe_period"
                    android:textColor="@color/common_white" />

                <TextView
                    android:id="@+id/tvPeriodContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvPeriodTitle"
                    android:layout_centerHorizontal="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/recipe_period_detail"
                    android:textColor="@color/common_white" />

                <CheckBox
                    android:id="@+id/cbPeriod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:checked="false" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_gray_e4"
            android:padding="10dp"
            android:text="@string/recipe_select_trigger_title"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layTriggerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_gray_e4"
            android:padding="10dp"
            android:text="@string/recipe_select_action_title"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layActionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>
</ScrollView>